--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
 <p>Tel: +123456789</p>
-<p>Email: serife-eroglu@outlook.de</p>
+<p>Email: seeerio@outlook.de</p>
 <p>Address:</p>
 <p>
-  Roßstraße 12<br />
-  42105 Wuppertal<br />
+  Fantasiestraße 17<br />
+  12345 McDonalds<br />
   Deutschland <br />
 </p>
